--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "^2.1257.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.1",
     "classnames": "^2.3.2",
     "cookie-cutter": "^0.2.0",
