--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "@reduxjs/toolkit": "^1.8.5",
     "aws-sdk": "^2.1257.0",
     "axios": "^0.27.2",
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.0",
     "bootstrap": "^5.2.1",
+    "chart.js": "^4.4.7",
     "classnames": "^2.3.2",
     "cookie-cutter": "^0.2.0",
     "cookies-next": "^4.1.0",
     "dayjs": "^1.11.10",
+    "dynamodb": "^1.3.0",
     "material-react-table": "^2.6.1",
     "next": "13.0.1",
     "next-auth": "^4.16.4",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
